feat: adiciona DTOs de diagnóstico financeiro feat: implementa motor de análise mensal feat: adiciona endpoint de análise mensal